# pNob

./: LICENSE  README.md  forms.py  manage.py  mysql_util.py  notebook.sql  pyproject.toml
templates/: about.html  add_article.html  article.html  articles.html  dashboard.html  edit_article.html  home.html  layout.html  login.html  register.html
templates/includes/: _footer.html  _formhelpers.html  _messages.html  _navbar.html
