[project]
name = "PyNotes"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "passlib>=1.7.4",
    "pymysql>=1.2.0",
    "wtforms>=3.2.2",
]
[[tool.uv.index]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"


